Reorganized with new features