@@ -5,41 +5,58 @@ import com.example.livemobileapp.model.User;
 import com.example.livemobileapp.repository.PostRepository;
 import com.example.livemobileapp.repository.UserRepository;
 import com.example.livemobileapp.web.requests.request.AddPostRequest;
+import com.example.livemobileapp.web.requests.response.PostResponse;
 import lombok.AllArgsConstructor;
+import org.bson.BsonBinarySubType;
+import org.bson.types.Binary;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
+import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
 public class PostService {
     private final PostRepository postRepository;
     private final UserRepository userRepository;
-    public List<Post> getPageablePosts(Integer page) {
-        Pageable pageable= PageRequest.of(page, 5, Sort.Direction.ASC);
+    public List<PostResponse> getPageablePosts(Integer page) {
+        Pageable pageable= PageRequest.of(page, 15, Sort.Direction.DESC,"createdAt");
 
         Page<Post> posts = postRepository.findAll(pageable);
-        return posts.stream().toList();
-
+        DateTimeFormatter format = DateTimeFormatter.ofPattern("dd MMMM, HH:mm");
+        return posts.stream().map(post -> new PostResponse(post.getId(),
+                userRepository.findById(post.getUserId()).get().getUsername(),
+                userRepository.findById(post.getUserId()).get().getId(),
+                userRepository.findById(post.getUserId()).get().getFirstname(),
+                userRepository.findById(post.getUserId()).get().getLastname(),
+                post.getContent(),
+                post.getFile(),
+                userRepository.findById(post.getUserId()).get().getProfilePicture().getFile(),post.getCreatedAt().format(format))).collect(Collectors.toList());
     }
 
-    public Post addPost(AddPostRequest postRequest) {
+    public Post addPost(MultipartFile postPic, AddPostRequest postRequest) throws IOException {
         Optional<User> user = userRepository.findById(postRequest.getUserId());
         if(user.isPresent())
         {
             User existUser = user.get();
             Post post = new Post();
-            post.setProfilePicture(existUser.getProfilePicture());
-            post.setUsername(existUser.getUsername());
             post.setUserId(existUser.getId());
-            post.setFirstname(existUser.getFirstname());
-            post.setLastname(existUser.getLastname());
             post.setContent(postRequest.getContent());
+            if (postPic != null) {
+                post.setFile(new Binary(BsonBinarySubType.BINARY, postPic.getInputStream().readAllBytes()));
+            }
+
+
             return postRepository.save(post);
 
         }
